# TakeHome

./: .gitignore  README.md  analysis.py  bayesian_log.json  bayesian_log1.json  bayesian_log2.json  big_lasso.py  data_lookup.py  diagnosis_x.npy  diagnosis_y.npy  file_utils.py  gen_job.sbatch  genetic.py  genetic_alg_results.npy  lasso.py  linear.py  models.py  prods_gen.sbatch  pyproject.toml  stochastic_analysis.py  test.ipynb  xg.err  xg.out  xgboost_job.sbatch  xgbtest.ipynb
bayes_logs/: bayesian_log1.json  bayesian_log1_0118.json  bayesian_log2_0118.json  bayesian_y1_rnd0.json  bayesian_y1_rnd1.json  bayesian_y1_rnd2.json  bayesian_y1_rnd3.json  bayesian_y1_rnd4.json  bayesian_y1_rnd5.json  bayesian_y1_rnd6.json  bayesian_y1_rnd7.json  bayesian_y1_rnd8.json  bayesian_y1_rnd9.json  bayesian_y2_rnd1.json  bayesian_y2_rnd10.json  bayesian_y2_rnd2.json  bayesian_y2_rnd3.json  bayesian_y2_rnd4.json  bayesian_y2_rnd5.json  bayesian_y2_rnd6.json  bayesian_y2_rnd7.json  bayesian_y2_rnd8.json  bayesian_y2_rnd9.json
bayes_logs1/: bayesian_y1_rnd0.json  bayesian_y1_rnd1.json  bayesian_y1_rnd2.json  bayesian_y1_rnd3.json  bayesian_y1_rnd4.json  bayesian_y1_rnd5.json  bayesian_y1_rnd6.json  bayesian_y1_rnd7.json  bayesian_y1_rnd8.json  bayesian_y1_rnd9.json  bayesian_y2_rnd1.json  bayesian_y2_rnd10.json  bayesian_y2_rnd2.json  bayesian_y2_rnd3.json  bayesian_y2_rnd4.json  bayesian_y2_rnd5.json  bayesian_y2_rnd7.json  bayesian_y2_rnd8.json  bayesian_y2_rnd9.json
calibration/: constants.py  demo.py  genetic.py  normaleqs.py  test.py  xgbhyper.py  xgbtest.py
data/: base.py  (+3 more)
(+131 files in other folders)
