[tool.poetry]
name = "clear-street-markets-takehome"
version = "0.1.0"
description = "Quant Researcher Take Home Project"
authors = ["Cem Gultekin <cgultekin95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
torch = "^2.1.2"
ipykernel = "^6.28.0"
dask = {extras = ["distributed"], version = "^2023.12.1"}
pyarrow = "^14.0.2"
matplotlib = "^3.8.2"
tensorboard = "^2.15.1"
tdqm = "^0.0.1"
ipywidgets = "^8.1.1"
qtconsole = "^5.5.1"
notebook = "^7.0.6"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
geneticalgorithm = "^1.0.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
